# aperiodic-guardrails

./: .gitignore  COMPLETION_REPORT.md  HANDOFF.md  LICENSE  README.md  corpus_expanded.csv  corpus_full.csv  pyproject.toml  run_honest_benchmark.py
checkpoints/: ADD-citations-5-papers.json  ADD-composition-theorem.json  ADD-ground-truth-monoid-tests.json  ADD-mod-p-bypass-2-3-5-7.json  ADD-monoid-size-distribution.json  ADD-pcre-input-validation.json  ADD-research-cold-outreach.json  ADD-responsible-disclosure.json  DOWNGRADE-thm53-to-proposition.json  DOWNGRADE-thm55-to-proposition.json  FIX-bdd-tolerance-zero-pct.json  FIX-corpus-merge-91-plus-49.json  FIX-heuristic-fallback-removal.json  FIX-number-reconciliation.json  FIX-thm52-proof-error.json  FIX-tot-fabrication.json  L1-T3-tot-expansion.json  L1-T4a-neural-guardrails.json  L1-T4b-extractor-framing.json  L1-T5a-minor-fixes.json  L1-T5b-appendix-move.json  L1-T5c-consistency.json  L1-T6-peer-review.json  L1-benign-domains.json  L1-fano-distribution.json  L1-large-grammar-benchmark.json  L1-neural-mod2-experiment.json  L2-endorsement-followup.json  L2-sub-arxiv.json  L2-sub-openreview.json  L2-sub-usenix.json  L2-sub-zenodo.json  L5-openreview-submit.json  L5-secrets-router-crossref.json  L5-zenodo-submit.json
features/: adaptive_adversary.feature  attack_v1_v2.feature  benchmark_tot.feature  environment.py  filter_composition.feature  neural_detection.feature  preprocessing_defense.feature  theorem_aperiodicity.feature  theorem_blindness.feature  theorem_fano.feature
features/steps/: __init__.py  benchmark_steps.py  blindness_steps.py  defense_steps.py  engine_steps.py  fano_steps.py  monoid_steps.py
paper/: main.tex  references.bib
paper/supplementary/: appendix-poc-source.tex
results/: MOD_P_BYPASS_MATRIX_SUMMARY.md  MONOID_ANALYSIS.md  class_c_adaptive_adversary.json  class_c_defense_test.json  comprehensive_empirical_validation.json  e2e_llmguard_validation.json  endorsement_outreach.md  final_peer_review.md  mod_p_bypass_matrix.json  monoid_distribution.json  tot_n50_honest.json  transformer_tc0_validation.json
skills/: encode-request.md  gen-medium.md  peer-reviewer.md  research-paper.md
src/aperiodic_guardrails/: engine.py
src/aperiodic_guardrails/benchmark/: grammar.py  runner.py
src/aperiodic_guardrails/defense/: filter_composition.py  neural_detector.py  preprocessing.py
src/aperiodic_guardrails/mediums/: __init__.py  graph_solver.py
src/aperiodic_guardrails/monoid/: __init__.py  extractor.py
src/guardrail_impossibility/: __init__.py  encode.py  engine.py
src/guardrail_impossibility/benchmark/: __init__.py  runner.py
src/guardrail_impossibility/mediums/: __init__.py  tot_solver.py  web_scraper.py
src/guardrail_impossibility/monoid/: __init__.py  extractor.py
tests/: test_adversarial.py  test_benchmark.py  test_composition.py  test_engine.py  test_mod_p_bypass.py  test_monoid.py  test_monoid_ground_truth.py
tools/: generate_mod_p_matrix.py
