[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "guardrail-impossibility"
version = "1.0.0"
description = "Algebraic and computational limits of LLM guardrails — proof-of-concept, monoid extractor, and benchmark harness"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Joseph Robert Lopez", email = "josephrobertlopez@gmail.com"},
]
keywords = ["llm", "guardrails", "security", "formal-languages", "syntactic-monoids", "algebraic-automata"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "scipy>=1.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "behave>=1.2.6"]

[project.scripts]
guardrail-run = "guardrail_impossibility.engine:main"
guardrail-encode = "guardrail_impossibility.encode:main"
monoid-extract = "guardrail_impossibility.monoid.extractor:main"
guardrail-benchmark = "guardrail_impossibility.benchmark.runner:main"

[project.urls]
Paper = "https://arxiv.org/abs/XXXX.XXXXX"
Repository = "https://github.com/josephrobertlopez/guardrail-impossibility"

[tool.hatch.build.targets.wheel]
packages = ["src/guardrail_impossibility"]

[tool.pytest.ini_options]
testpaths = ["tests"]
