[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aperiodic-guardrails"
version = "1.0.0"
description = "Algebraic and computational limits of LLM guardrails — proof-of-concept, monoid extractor, and benchmark harness"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Joseph Robert Lopez", email = "josephrobertlopez@gmail.com"},
]
keywords = ["llm", "guardrails", "security", "formal-languages", "syntactic-monoids", "algebraic-automata"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "scipy>=1.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "behave>=1.2.6"]

[project.scripts]
guardrail-run = "aperiodic_guardrails.engine:main"
guardrail-encode = "aperiodic_guardrails.encode:main"
monoid-extract = "aperiodic_guardrails.monoid.extractor:main"
guardrail-benchmark = "aperiodic_guardrails.benchmark.runner:main"

[project.urls]
Paper = "https://arxiv.org/abs/XXXX.XXXXX"
Repository = "https://github.com/josephrobertlopez/aperiodic-guardrails"

[tool.hatch.build.targets.wheel]
packages = ["src/aperiodic_guardrails"]

[tool.pytest.ini_options]
testpaths = ["tests"]
